CVSL-1179-alignment-fixes (#657)

--- a/assets/sass/components/_utils.scss
+++ b/assets/sass/components/_utils.scss
@@ -92,3 +92,7 @@ table.last-col-right {
 .display-inline-flex {
   display: inline-flex;
 }
+
+.margin-top-85 {
+  margin-top: 85px;
+}
